--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<center><h1>Open Data Science at</h1></center>
+<h1>Open Data Science at</h1>
 <img src="images/logo.png", height = 500px>
 
 <hr />
