updated basic info and added more recent messages

--- a/about.html
+++ b/about.html
@@ -3,18 +3,19 @@ layout: default
 ---
 
 <div class="well">
-    <h1>Brief History</h1>
-    <p>Blah blah blah SIO R Users Group and SIO Bioinformatics Users Group</p>
+    <h1>History</h1>
+    <p>The <b>Open Data Science Initiative at SIO</b> is a collaborative initiative formed in 2016 based on the shared goals and interests of the SIO Bioinformatics Users Group and the SIO R Users Group.</p>
+    <p>The <b>SIO Bioinformatics Users Group</b> was founded in ****</p>
+    <p>The <b>SIO R Users Group</b> was founded in 2010 to help graduate students learn and troubleshoot R, which is a free software for statistical computing and graphics (see <a href="http://www.r-project.org/">http://www.r-project.org/</a>). Attendees are also welcome to come with questions or issues relating to their own data analysis in R. Meetings typically occur once per week during the normal academic year. No commitment to attendance is required, and all R experience levels are welcome.
 </div>
 
 <div class="well">
     <h1>Our Team</h1>
     <p><i><b>Jessica Blanton</b></i> is ...</p>
     <p><i><b>Tessa Pierce</b></i> is ...</p>
-    <p><i><b>Hao Ye</b></i> is ...</p>
+    <p><i><b>Hao Ye</b></i> is a postdoc in the <a href="http://deepeco.ucsd.edu/">Sugihara Lab</a> at SIO. He studies dynamic systems and quantitative ecology, and mainly uses R (and a little bit of C++).</p>
 </div>
 
 <div class="well">
-    <h1>Brief History</h1>
-    <p>Blah blah blah SIO R Users Group and SIO Bioinformatics Users Group</p>
+    <p>This website is dedicated in memory of <a href="https://scripps.ucsd.edu/news/memoriam-rachel-morrison">Rachel Morrison</a>, who founded the SIO R Users Group in 2010.</p>
 </div>
