--- a/mission.html
+++ b/mission.html
@@ -4,12 +4,24 @@ layout: default
 
 <div class="well">
     <h1>Mission Statement</h1>
-    <p>Our goal is to make scientific computing resources accessible to the Scripps Oceanographic community and beyond. Something something open data, code sharing, teaching philosophy. </p>
+    <p>Our goal is to bring the principles of open science to scientific computing at Scripps Institution of Oceanography. We believe that scientific progress increasingly relies on collaborative efforts and benefits greatly from a more open approach to research, including open data, code sharing, and open access publications.</p>
+    <p>We seek to achieve these objectives by:
+    <ul>
+    	<li>organizing workshops and seminars</li>
+	    <li>connecting SIO and UCSD personnel with the broader scientific community</li>
+	    <li>encouraging peer-to-peer teaching</li>
+	    <li>maintaining a centralized online hub of resources</li>
+    </ul>
+    </p>
 </div>
 
 <div class="well">
     <h1>Code of Conduct</h1>
-    <p>Basic summary of goals and code of conduct.</p>
-    <p>Follow the <a href="https://ucsd.edu/about/principles.html">UCSD Principles of Community</a></p>
-    <p>Follow the <a href="http://software-carpentry.org/conduct/">Software Carpentry Code of Conduct</a></p>
+    <p>As a community, we are committed to building a shared and inclusive environment for everyone. We acknowledge that members of our community have been subject to or currently experience discrimination on the basis of race, sex, sexual orientation, disability, ethnicity, nationality, physical appearance, religious or political beliefs, and more. We do **not** tolerate harassment based on these classifications, or for any reason. Violations of this code of conduct will be reported to the appropriate University offices, and individuals who violate it may further be excluded from future events.</p>
+    <p> For more details, please check out the: 
+    <ul>
+    	<li><a href="https://ucsd.edu/about/principles.html">UCSD Principles of Community</a></li>
+    	<li><a href="http://software-carpentry.org/conduct/">Software Carpentry Code of Conduct</a></li>
+    </ul>
+    </p>
 </div>
