--- a/resources.html
+++ b/resources.html
@@ -3,5 +3,28 @@ layout: default
 ---
 
 <div class="well">
-  
+	<h1>Getting Started</h1>
+  	First, be sure to subscribe to out listserves for the latest updates and announcements:
+    <ul>
+    	<li><a href="https://siomail.ucsd.edu/mailman/listinfo/bioinf">SIO Bioinformatics Users Group mailing list</a></li>
+    	<li><a href="https://siomail.ucsd.edu/mailman/listinfo/r-users">SIO R Users Group mailing list</a></li>
+    </ul>
+    
+    Next, ****
+</div>
+
+<div class="well">
+	<h1>Resource Repositories</h1>
+	<ul>
+    	<li><a href="#">One</a></li>
+    	<li><a href="#">Two</a></li>
+    </ul>
+</div>
+
+<div class="well">
+	<h1>Class Repositories</h1>
+	<ul>
+    	<li><a href="#">One</a></li>
+    	<li><a href="#">Two</a></li>
+    </ul>
 </div>
