--- a/about.html
+++ b/about.html
@@ -17,5 +17,5 @@ layout: default
 </div>
 
 <div class="well">
-    <p>This website is dedicated in memory of <a href="https://scripps.ucsd.edu/news/memoriam-rachel-morrison">Rachel Morrison</a>, who founded the SIO R Users Group in 2010.</p>
+    <p>This website is dedicated in memory of <a href="https://scripps.ucsd.edu/news/memoriam-rachel-morrison">Rachel Morrison</a>, who founded the SIO R Users Group.</p>
 </div>
