--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ layout: default
     <h1>History</h1>
     <p>The <b>Open Data Science Initiative at SIO</b> is a collaborative initiative formed in 2016 based on the shared goals and interests of the SIO Bioinformatics Users Group and the SIO R Users Group.</p>
     <p>The <b>SIO Bioinformatics Users Group</b> was founded in ****</p>
-    <p>The <b>SIO R Users Group</b> was founded in 2010 to help graduate students learn and troubleshoot R, which is a free software for statistical computing and graphics (see <a href="http://www.r-project.org/">http://www.r-project.org/</a>). Attendees are also welcome to come with questions or issues relating to their own data analysis in R. Meetings typically occur once per week during the normal academic year. No commitment to attendance is required, and all R experience levels are welcome.
+    <p>The <b>SIO R Users Group</b> was founded in 2010 to help graduate students learn and troubleshoot R, which is a free software for statistical computing and graphics (see <a href="http://www.r-project.org/">http://www.r-project.org/</a>). Attendees are also welcome to come with questions or issues relating to their own data analysis in R. Meetings typically occur once per week during the normal academic year. No commitment to attendance is required, and useRs at all experience levels are welcome.
 </div>
 
 <div class="well">
