--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@ layout: default
 <div class="well">
     <h1>Our Team</h1>
     <p><i><b>Jessica Blanton</b></i> is a PhD candidate in the <a href="http://microbialoceans.ucsd.edu/">E.Allen Lab at SIO</a>.  She studies the microbiology of marine animals using amplicon and shotgun metagenomic sequencing.</p>
-    <p><i><b>Tessa Pierce</b></i> is ...</p>
+    <p><i><b>Tessa Pierce</b></i> is grading final exams for BIEB 132.</p>
     <p><i><b>Hao Ye</b></i> is a postdoc in the <a href="http://deepeco.ucsd.edu/">Sugihara Lab</a> at SIO. He studies dynamic systems and quantitative ecology, and mainly uses R (and a little bit of C++).</p>
 </div>
 
