added events list reorganized sidebar tweaked formatting corrected minor typos

--- a/resources.html
+++ b/resources.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="well">
 	<h1>Getting Started</h1>
-  	First, be sure to subscribe to out listserves for the latest updates and announcements:
+  	First, be sure to subscribe to our listserves for the latest updates and announcements:
     <ul>
     	<li><a href="https://siomail.ucsd.edu/mailman/listinfo/bioinf">SIO Bioinformatics Users Group mailing list</a></li>
     	<li><a href="https://siomail.ucsd.edu/mailman/listinfo/r-users">SIO R Users Group mailing list</a></li>
