updated resources page (and CSS accordingly) fixed event date for R users group tweaked layout of header and sidebar

--- a/resources.html
+++ b/resources.html
@@ -2,29 +2,54 @@
 layout: default
 ---
 
-<div class="well">
-	<h1>Getting Started</h1>
-  	First, be sure to subscribe to our listserves for the latest updates and announcements:
-    <ul>
-    	<li><a href="https://siomail.ucsd.edu/mailman/listinfo/bioinf">SIO Bioinformatics Users Group mailing list</a></li>
-    	<li><a href="https://siomail.ucsd.edu/mailman/listinfo/r-users">SIO R Users Group mailing list</a></li>
-    </ul>
-    
-    Next, ****
-</div>
+<table width = 697px>
+<tr>
+<td width = "16%"></td>
+<td width = "42%"><div align="center"><h1>Bioinformatics Users Group</h1></div></td>
+<td width = "42%"><div align="center"><h1>R Users Group</h1></div></td>
+</tr>
+<tr>
+<td style="vertical-align: middle;"><div><h1>Materials</h1></div></td>
+<td class="fillcell">
+<ul style="padding-left:20px">
+<li><a href="https://github.com/Open-Data-Science-at-SIO/BUG-Resources">BUG-Resources</a> Github repository of materials for the Bioinformatics Users Group.</li>
+</ul>
+</td>
+<td class="fillcell">
+<ul style="padding-left:20px">
+<li><a href="https://github.com/Open-Data-Science-at-SIO/R-Users-Presentations">R-Users-Presentations</a> Github repository of presentation materials for the weekly R Users Group meetings.</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td style="vertical-align: middle;"><div><h1>Workshops<br /> &amp; Classes</h1></div></td>
+<td class="fillcell">
+<ul style="padding-left:20px">
+<li>[links to separate workshops or break out as repos?]</li>
+</ul>
+</td>
+<td class="fillcell">
+<ul style="padding-left:20px">
+<li><a href="https://github.com/Open-Data-Science-at-SIO/Intro-Data-Viz-Winter-2017">Intro-Data-Viz-Winter-2017</a> Github repository of course materials for Introductory Data Visualization course (Winter quarter 2017)</li>
+<li>TBD [?(Hao) Reproducible Research course (Spring quarter 2017)?]</li>
+<li>TBD [?(Eric Archer) Intro R Course (Spring quarter 2017)?]</li>
+<li>TBD [?(Jessica Carriere-Garwood & Eiren Jacobson) Intro R Course (Spring quarter 2015)?]</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td style="vertical-align: middle;"><div><h1>Mailing Lists</h1></div></td>
+<td class="fillcell">
+<a href="https://siomail.ucsd.edu/mailman/listinfo/bioinf">Mailing list</a> for the SIO Bioinformatics Users Group
+</td>
+<td class="fillcell">
+<a href="https://siomail.ucsd.edu/mailman/listinfo/r-users">Mailing list</a> for the SIO R Users Group
+</td>
+</tr>
+<tr>
+<td style="vertical-align: middle;"><div><h1>Other</h1></div></td>
+<td class="fillcell" colspan=2>
+<a href="{{ site.baseurl }}/links.html">Our favorite links</a> to other websites containing info on <strong>Open Science</strong>, <strong>Programming</strong>, <strong>Git</strong>, <strong>PERL</strong>, <strong>Python</strong>, &amp; <strong>R</strong></td>
+</tr>
+</table>
 
-<div class="well">
-	<h1>Resource Repositories</h1>
-	<ul>
-    	<li><a href="#">One</a></li>
-    	<li><a href="#">Two</a></li>
-    </ul>
-</div>
-
-<div class="well">
-	<h1>Class Repositories</h1>
-	<ul>
-    	<li><a href="#">One</a></li>
-    	<li><a href="#">Two</a></li>
-    </ul>
-</div>
