--- a/mission.html
+++ b/mission.html
@@ -17,7 +17,7 @@ layout: default
 
 <div class="well">
     <h1>Code of Conduct</h1>
-    <p>As a community, we are committed to building a shared and inclusive environment for everyone. We acknowledge that members of our community have been subject to or currently experience discrimination on the basis of race, sex, sexual orientation, disability, ethnicity, nationality, physical appearance, religious or political beliefs, and more. We do **not** tolerate harassment based on these classifications, or for any reason. Violations of this code of conduct will be reported to the appropriate University offices, and individuals who violate it may further be excluded from future events.</p>
+    <p>As a community, we are committed to building a shared and inclusive environment. We acknowledge that members of our community have been subject to or currently experience discrimination on the basis of race, sex, sexual orientation, disability, ethnicity, nationality, physical appearance, religious or political beliefs, and more. We do **not** tolerate harassment based on these classifications, or for any reason. Individuals who violate this code of conduct may face actions including exclusion from future events.</p>
     <p> For more details, please check out the: 
     <ul>
     	<li><a href="https://ucsd.edu/about/principles.html">UCSD Principles of Community</a></li>
