link to repo and further tweaks

--- a/resources.html
+++ b/resources.html
@@ -12,12 +12,12 @@ layout: default
 <td style="vertical-align: middle;"><div><h1>Materials</h1></div></td>
 <td class="fillcell">
 <ul style="padding-left:20px">
-<li><a href="https://github.com/Open-Data-Science-at-SIO/BUG-Resources">BUG-Resources</a> Github repository of materials for the Bioinformatics Users Group.</li>
+<li><a href="https://github.com/Open-Data-Science-at-SIO/BUG-Resources">BUG-Resources</a> &mdash; Github repository of materials for the Bioinformatics Users Group.</li>
 </ul>
 </td>
 <td class="fillcell">
 <ul style="padding-left:20px">
-<li><a href="https://github.com/Open-Data-Science-at-SIO/R-Users-Presentations">R-Users-Presentations</a> Github repository of presentation materials for the weekly R Users Group meetings.</li>
+<li><a href="https://github.com/Open-Data-Science-at-SIO/R-Users-Presentations">R-Users-Presentations</a> &mdash; Github repository of presentation materials for the weekly R Users Group meetings.</li>
 </ul>
 </td>
 </tr>
@@ -30,8 +30,8 @@ layout: default
 </td>
 <td class="fillcell">
 <ul style="padding-left:20px">
-<li><a href="https://github.com/Open-Data-Science-at-SIO/Intro-Data-Viz-Winter-2017">Intro-Data-Viz-Winter-2017</a> Github repository of course materials for Introductory Data Visualization course (Winter quarter 2017)</li>
-<li>TBD [?(Hao) Reproducible Research course (Spring quarter 2017)?]</li>
+<li><a href="https://github.com/Open-Data-Science-at-SIO/Intro-Data-Viz-Winter-2017">Intro-Data-Viz-Winter-2017</a> &mdash; Github repository of course materials for "Introduction to Data Visualization and Data Wrangling in R" (Winter 2017)</li>
+<li><a href="https://github.com/Open-Data-Science-at-SIO/RRROBOTS">Reproducible Research Seminar </a> &mdash; Github repository of course materials for "Reproducible Research in R for Ocean Biosciences: Open-science Training Seminar" (Spring 2017)</li>
 <li>TBD [?(Eric Archer) Intro R Course (Spring quarter 2017)?]</li>
 <li>TBD [?(Jessica Carriere-Garwood & Eiren Jacobson) Intro R Course (Spring quarter 2015)?]</li>
 </ul>
