--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 {% assign author = site.authors[post.author] %}
 <div class="article">
     <div class="well">
-        <h1><a href="{{ site.baseurl}}{{ post.url }}">{{ post.date | date: "%b %-d, %Y" }} - {{ post.title }}</a></h1>
+        <h1><a href="{{ site.baseurl}}{{ post.url }}">{{ post.date | date: "%Y %b %-d" }} - {{ post.title }}</a></h1>
         <h2>posted by: <a href="mailto:?to={{author.email}}">{{author.display_name}}</a></h2>
         {% if site.comments and post.comments %}
             {% if site.disqus != '' %}
