updated events and link to Intro R repo

--- a/resources.html
+++ b/resources.html
@@ -33,7 +33,7 @@ layout: default
 <li><a href="https://github.com/Open-Data-Science-at-SIO/Intro-Data-Viz-Winter-2017">Intro-Data-Viz-Winter-2017</a> &mdash; Github repository of course materials for "Introduction to Data Visualization and Data Wrangling in R" (Winter 2017)</li>
 <li><a href="https://github.com/Open-Data-Science-at-SIO/RRROBOTS">Reproducible Research Seminar </a> &mdash; Github repository of course materials for "Reproducible Research in R for Ocean Biosciences: Open-science Training Seminar" (Spring 2017)</li>
 <li>TBD [?(Eric Archer) Intro R Course (Spring quarter 2017)?]</li>
-<li>TBD [?(Jessica Carriere-Garwood & Eiren Jacobson) Intro R Course (Spring quarter 2015)?]</li>
+<li><a href="https://github.com/Open-Data-Science-at-SIO/Intro-to-R-for-Oceanographers">Intro-to-R-for-Oceanographers</a> &mdash; Github repository of course materials for "Intro to R for Oceanographers" (Spring 2015)</li>
 </ul>
 </td>
 </tr>
