--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<img src="images/logo.png", height = 500px>
+<img src="{{ site.baseurl}}/images/logo.png", height = 500px>
 
 <hr />
 <h2> Recent News and Events </h2>
